# modules_dynfilefs

./: CMakeLists.txt  EFIDroid.ini  EFIDroidDependencies.ini
include/lib/: dynfilefs.h
src/: dynfilefs.c  main.c
